Fixed naming across all parts
Signed-off-by: Charles de Dreuille <charles.dedreuille@gmail.com>

--- a/packages/ui/css/styles.css
+++ b/packages/ui/css/styles.css
@@ -10380,7 +10380,7 @@
     }
   }
 
-  &[data-collapsible="true"] {
+  &[data-start-collapsed="true"] {
     padding: 0;
     transition: width .3s ease-in-out;
 
