--- a/packages/ui/src/css/core.css
+++ b/packages/ui/src/css/core.css
@@ -143,7 +143,7 @@
 }
 
 /* Dark theme tokens */
-[data-theme='dark'] {
+[data-theme-mode='dark'] {
   /* Gray scale */
   --bui-gray-1: #191919;
   --bui-gray-2: #242424;
