--- a/docs-ui/src/components/Snippet/styles.module.css
+++ b/docs-ui/src/components/Snippet/styles.module.css
@@ -35,7 +35,7 @@
   font-size: 14px;
 }
 
-[data-theme='dark'] .previewContent {
+[data-theme-mode='dark'] .previewContent {
   background-image: radial-gradient(
     rgba(255, 255, 255, 0.18) 1px,
     transparent 0
