--- a/docs-ui/src/components/PropsTable/TypePopup.module.css
+++ b/docs-ui/src/components/PropsTable/TypePopup.module.css
@@ -16,7 +16,7 @@
   text-decoration: underline;
 }
 
-[data-theme='dark'] .button {
+[data-theme-mode='dark'] .button {
   background-color: #2c2c2c;
   color: #fff;
 }
