--- a/docs-ui/src/css/globals.css
+++ b/docs-ui/src/css/globals.css
@@ -18,7 +18,7 @@
   --surface-1: #f4f4f4;
 }
 
-[data-theme='dark'] {
+[data-theme-mode='dark'] {
   --bg: #000;
   --panel: #181818;
   --panel-hover: #202020;
@@ -54,8 +54,8 @@ iframe {
   line-height: 1.7;
 }
 
-[data-theme='dark'] .shiki,
-[data-theme='dark'] .shiki span {
+[data-theme-mode='dark'] .shiki,
+[data-theme-mode='dark'] .shiki span {
   color: var(--shiki-dark) !important;
   /* Optional, if you also want font styles */
   font-style: var(--shiki-dark-font-style) !important;
