create-app - Added Notifications and Signals to be installed by default
Signed-off-by: Andre Wanlin <awanlin@spotify.com>

--- a/packages/create-app/templates/next-app/packages/app/package.json.hbs
+++ b/packages/create-app/templates/next-app/packages/app/package.json.hbs
@@ -19,9 +19,11 @@
     "@backstage/frontend-defaults": "^{{ version '@backstage/frontend-defaults'}}",
     "@backstage/frontend-plugin-api": "^{{ version '@backstage/frontend-plugin-api'}}",
     "@backstage/plugin-catalog": "^{{ version '@backstage/plugin-catalog'}}",
+    "@backstage/plugin-notifications": "^{{ version '@backstage/plugin-notifications'}}",
     "@backstage/plugin-org": "^{{ version '@backstage/plugin-org'}}",
     "@backstage/plugin-scaffolder": "^{{ version '@backstage/plugin-scaffolder'}}",
     "@backstage/plugin-search": "^{{ version '@backstage/plugin-search'}}",
+    "@backstage/plugin-signals": "^{{ version '@backstage/plugin-signals'}}",
     "@backstage/plugin-user-settings": "^{{ version '@backstage/plugin-user-settings'}}",
     "@backstage/ui": "^{{ version '@backstage/ui'}}",
     "@material-ui/core": "^4.12.2",
