--- a/packages/ui/src/components/TagGroup/TagGroup.styles.css
+++ b/packages/ui/src/components/TagGroup/TagGroup.styles.css
@@ -23,7 +23,7 @@
 .bui-Tag {
   color: var(--bui-fg-primary);
   background-color: var(--bui-gray-2);
-  border-radius: var(--bui-radius-full);
+  border-radius: var(--bui-radius-2);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -59,6 +59,11 @@
 
 .bui-Tag[data-selected] {
   box-shadow: inset 0 0 0 1px var(--bui-gray-8);
+}
+
+.bui-Tag[data-disabled] {
+  color: var(--bui-fg-disabled);
+  cursor: not-allowed;
 }
 
 .bui-TagRemoveButton {
