cli: fix nfs plugin template id -> pluginId
Signed-off-by: Patrik Oldsberg <poldsberg@gmail.com>

--- a/packages/cli/templates/new-frontend-plugin/src/plugin.tsx.hbs
+++ b/packages/cli/templates/new-frontend-plugin/src/plugin.tsx.hbs
@@ -1,4 +1,3 @@
-import React from 'react';
 import {
   createFrontendPlugin,
   PageBlueprint,
@@ -18,7 +17,7 @@ export const page = PageBlueprint.make({
 });
 
 export const {{ pluginVar }} = createFrontendPlugin({
-  id: '{{pluginId}}',
+  pluginId: '{{pluginId}}',
   extensions: [page],
   routes: {
     root: rootRouteRef,
