ui: add bui-align-baseline class implied by Flex component
Signed-off-by: MT Lewis <mtlewis@users.noreply.github.com>

--- a/packages/ui/css/styles.css
+++ b/packages/ui/css/styles.css
@@ -8797,6 +8797,10 @@
   align-items: end;
 }
 
+.bui-align-baseline {
+  align-items: baseline;
+}
+
 .bui-align-stretch {
   align-items: stretch;
 }
