--- a/packages/cli/templates/backend-plugin/src/plugin.ts.hbs
+++ b/packages/cli/templates/backend-plugin/src/plugin.ts.hbs
@@ -3,8 +3,7 @@ import {
   createBackendPlugin,
 } from '@backstage/backend-plugin-api';
 import { createRouter } from './router';
-import { catalogServiceRef } from '@backstage/plugin-catalog-node';
-import { createTodoListService } from './services/TodoListService';
+import { todoListServiceRef } from './services/TodoListService';
 
 /**
  * {{pluginVar}} backend plugin
@@ -16,21 +15,15 @@ export const {{pluginVar}} = createBackendPlugin({
   register(env) {
     env.registerInit({
       deps: {
-        logger: coreServices.logger,
         httpAuth: coreServices.httpAuth,
         httpRouter: coreServices.httpRouter,
-        catalog: catalogServiceRef,
+        todoList: todoListServiceRef,
       },
-      async init({ logger, httpAuth, httpRouter, catalog }) {
-        const todoListService = await createTodoListService({
-          logger,
-          catalog,
-        });
-
+      async init({ httpAuth, httpRouter, todoList }) {
         httpRouter.use(
           await createRouter({
             httpAuth,
-            todoListService,
+            todoList,
           }),
         );
       },
