--- a/packages/ui/css/styles.css
+++ b/packages/ui/css/styles.css
@@ -10564,14 +10564,33 @@
           opacity: 0;
         }
       }
+
+      & .bui-InputWrapper {
+        & .bui-Input[data-icon] {
+          padding-right: 0;
+        }
+      }
     }
   }
 }
 
 .bui-SearchField .bui-Input {
-  padding-left: var(--bui-space-6);
-  padding-right: var(--bui-space-1);
-  transition: padding .3s ease-in-out;
+  transition: padding .3s ease-in-out, border-color .2s ease-in-out, outline-color .2s ease-in-out;
+
+  &[data-hovered] {
+    border-color: var(--bui-border-hover);
+  }
+
+  &[data-focused] {
+    border-color: var(--bui-border-pressed);
+    outline-width: 0;
+  }
+}
+
+.bui-SearchField .bui-InputWrapper {
+  & .bui-Input[data-icon] {
+    padding-right: var(--bui-space-6);
+  }
 }
 
 .bui-SearchField .bui-InputIcon {
@@ -10580,7 +10599,7 @@
   left: 0;
 
   &[data-size="small"] {
-    width: var(--bui-space-9);
+    width: var(--bui-space-8);
   }
 
   &[data-size="medium"] {
