--- a/packages/ui/css/styles.css
+++ b/packages/ui/css/styles.css
@@ -10451,6 +10451,31 @@
   }
 }
 
+.bui-InputAction {
+  position: absolute;
+  display: flex;
+  flex-direction: row;
+  right: var(--bui-space-3);
+  top: 50%;
+  transform: translateY(-50%);
+  color: var(--bui-fg-primary);
+  flex-shrink: 0;
+  /* To animate the icon when the input is collapsed */
+  transition: right 0.2s ease-in-out;
+
+  &[data-size='small'],
+  &[data-size='small'] svg {
+    width: 1rem;
+    height: 1rem;
+  }
+
+  &[data-size='medium'],
+  &[data-size='medium'] svg {
+    width: 1.25rem;
+    height: 1.25rem;
+  }
+}
+
 .bui-InputIcon {
   left: var(--bui-space-3);
   margin-right: var(--bui-space-1);
