add PasswordField to BUI, remove additional props from TextField
Signed-off-by: Hermione Bird <hermioneb@spotify.com>

--- a/packages/ui/css/styles.css
+++ b/packages/ui/css/styles.css
@@ -10431,6 +10431,14 @@
   display: flex;
 }
 
+.bui-PasswordField {
+  font-family: var(--bui-font-regular);
+  flex-direction: column;
+  flex-shrink: 0;
+  width: 100%;
+  display: flex;
+}
+
 .bui-InputWrapper {
   position: relative;
 
