--- a/packages/ui/src/components/PasswordField/PasswordField.styles.css
+++ b/packages/ui/src/components/PasswordField/PasswordField.styles.css
@@ -14,7 +14,7 @@
  * limitations under the License.
  */
 
-.bui-TextField {
+.bui-PasswordField {
   display: flex;
   flex-direction: column;
   font-family: var(--bui-font-regular);
@@ -114,5 +114,28 @@
     opacity: 0.5;
     cursor: not-allowed;
     border: 1px solid var(--bui-border-disabled);
+  }
+}
+
+.bui-InputAction {
+  position: absolute;
+  right: var(--bui-space-1);
+  top: 50%;
+  transform: translateY(-50%);
+  color: var(--bui-fg-primary);
+  flex-shrink: 0;
+  /* To animate the icon when the input is collapsed */
+  transition: right 0.2s ease-in-out;
+
+  &[data-size='small'],
+  &[data-size='small'] svg {
+    width: 1rem;
+    height: 1rem;
+  }
+
+  &[data-size='medium'],
+  &[data-size='medium'] svg {
+    width: 1.25rem;
+    height: 1.25rem;
   }
 }
