add page to docs-ui, fix aria labels, compatibility with one password icons, create custom button
Signed-off-by: Hermione Bird <hermioneb@spotify.com>

--- a/packages/ui/src/components/PasswordField/PasswordField.styles.css
+++ b/packages/ui/src/components/PasswordField/PasswordField.styles.css
@@ -20,122 +20,51 @@
   font-family: var(--bui-font-regular);
   width: 100%;
   flex-shrink: 0;
+  /* Reserve space for browser/password manager icon (e.g. 1Password) */
+  --bui-passwordmanager-icon-width: var(--bui-space-1);
 }
 
-.bui-InputWrapper {
-  position: relative;
-
-  &[data-size='small'] .bui-Input {
-    height: 2rem;
-  }
-
-  &[data-size='medium'] .bui-Input {
-    height: 2.5rem;
-  }
-
-  &[data-size='small'] .bui-Input[data-icon] {
-    padding-left: var(--bui-space-8);
-  }
-
-  &[data-size='medium'] .bui-Input[data-icon] {
-    padding-left: var(--bui-space-9);
-  }
-}
-
-.bui-InputIcon {
+.bui-InputVisibility {
   position: absolute;
-  left: var(--bui-space-3);
-  top: 50%;
-  transform: translateY(-50%);
-  margin-right: var(--bui-space-1);
-  color: var(--bui-fg-primary);
-  flex-shrink: 0;
-  pointer-events: none;
-  /* To animate the icon when the input is collapsed */
-  transition: left 0.2s ease-in-out;
-
-  &[data-size='small'],
-  &[data-size='small'] svg {
-    width: 1rem;
-    height: 1rem;
-  }
-
-  &[data-size='medium'],
-  &[data-size='medium'] svg {
-    width: 1.25rem;
-    height: 1.25rem;
-  }
-}
-
-.bui-Input {
+  right: var(--bui-passwordmanager-icon-width);
+  top: 0;
+  bottom: 0;
+  background-color: transparent;
+  cursor: pointer;
+  border: none;
+  padding: 0;
+  margin: 0;
   display: flex;
   align-items: center;
-  padding: 0 var(--bui-space-3);
-  border-radius: var(--bui-radius-2);
-  border: 1px solid var(--bui-border);
-  background-color: var(--bui-bg-surface-1);
-  font-size: var(--bui-font-size-3);
-  font-family: var(--bui-font-regular);
-  font-weight: var(--bui-font-weight-regular);
+  justify-content: center;
   color: var(--bui-fg-primary);
-  transition: border-color 0.2s ease-in-out, outline-color 0.2s ease-in-out;
-  width: 100%;
-  height: 100%;
-  cursor: inherit;
 
-  &::-webkit-search-cancel-button,
-  &::-webkit-search-decoration {
-    -webkit-appearance: none;
+  /* Size: small */
+  &[data-size='small'] {
+    width: 2rem;
+    height: 2rem;
   }
-
-  &::placeholder {
-    color: var(--bui-fg-secondary);
-  }
-
-  &[data-focused] {
-    outline-color: var(--bui-border-pressed);
-    outline-width: 0px;
-  }
-
-  &[data-hovered] {
-    border-color: var(--bui-border-hover);
-  }
-
-  &[data-focused] {
-    border-color: var(--bui-border-pressed);
-    outline-width: 0px;
-  }
-
-  &[data-invalid] {
-    border-color: var(--bui-fg-danger);
-  }
-
-  &[data-disabled] {
-    opacity: 0.5;
-    cursor: not-allowed;
-    border: 1px solid var(--bui-border-disabled);
-  }
-}
-
-.bui-InputAction {
-  position: absolute;
-  right: var(--bui-space-1);
-  top: 50%;
-  transform: translateY(-50%);
-  color: var(--bui-fg-primary);
-  flex-shrink: 0;
-  /* To animate the icon when the input is collapsed */
-  transition: right 0.2s ease-in-out;
-
-  &[data-size='small'],
   &[data-size='small'] svg {
     width: 1rem;
     height: 1rem;
   }
 
-  &[data-size='medium'],
+  /* Size: medium */
+  &[data-size='medium'] {
+    width: 2.5rem;
+    height: 2.5rem;
+  }
   &[data-size='medium'] svg {
     width: 1.25rem;
     height: 1.25rem;
   }
+}
+
+/* Ensure input has enough right padding for our toggle + PM icon */
+.bui-PasswordField .bui-InputWrapper[data-size='small'] .bui-Input {
+  padding-right: calc(2rem + var(--bui-passwordmanager-icon-width));
+}
+
+.bui-PasswordField .bui-InputWrapper[data-size='medium'] .bui-Input {
+  padding-right: calc(2.5rem + var(--bui-passwordmanager-icon-width));
 }
