--- a/packages/ui/css/styles.css
+++ b/packages/ui/css/styles.css
@@ -10431,16 +10431,6 @@
   display: flex;
 }
 
-.bui-PasswordField {
-  font-family: var(--bui-font-regular);
-  flex-direction: column;
-  flex-shrink: 0;
-  width: 100%;
-  display: flex;
-  /* Reserve space for browser/password manager icon (e.g. 1Password) */
-  --bui-passwordmanager-icon-width: var(--bui-space-1);
-}
-
 .bui-InputWrapper {
   position: relative;
 
@@ -10459,60 +10449,6 @@
   &[data-size="medium"] .bui-Input[data-icon] {
     padding-left: var(--bui-space-9);
   }
-}
-
-.bui-InputAction {
-  position: absolute;
-  display: flex;
-  flex-direction: row;
-  right: var(--bui-space-1);
-  top: 50%;
-  transform: translateY(-50%);
-  color: var(--bui-fg-primary);
-  flex-shrink: 0;
-  /* To animate the icon when the input is collapsed */
-  transition: right 0.2s ease-in-out;
-
-  &[data-size='small'],
-  &[data-size='small'] svg {
-    width: 1rem;
-    height: 1rem;
-  }
-
-  &[data-size='medium'],
-  &[data-size='medium'] svg {
-    width: 1.25rem;
-    height: 1.25rem;
-  }
-}
-
-.bui-InputVisibility {
-  background-color: transparent;
-  cursor: pointer;
-  border: none;
-  padding: 0;
-  margin: 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  color: var(--bui-fg-primary);
-
-  /* Size: small */
-  &[data-size="small"] { width: 2rem; height: 2rem; }
-  &[data-size="small"] svg { width: 1rem; height: 1rem; }
-
-  /* Size: medium */
-  &[data-size="medium"] { width: 2.5rem; height: 2.5rem; }
-  &[data-size="medium"] svg { width: 1.25rem; height: 1.25rem; }
-}
-
-/* Ensure input has enough right padding for our toggle + PM icon */
-.bui-PasswordField .bui-InputWrapper[data-size='small'] .bui-Input {
-  padding-right: calc(2rem + var(--bui-passwordmanager-icon-width));
-}
-
-.bui-PasswordField .bui-InputWrapper[data-size='medium'] .bui-Input {
-  padding-right: calc(2.5rem + var(--bui-passwordmanager-icon-width));
 }
 
 .bui-InputIcon {
@@ -10584,6 +10520,59 @@
     cursor: not-allowed;
     border: 1px solid var(--bui-border-disabled);
   }
+}
+
+.bui-PasswordField {
+  font-family: var(--bui-font-regular);
+  --bui-passwordmanager-icon-width: var(--bui-space-1);
+  flex-direction: column;
+  flex-shrink: 0;
+  width: 100%;
+  display: flex;
+}
+
+.bui-InputVisibility {
+  right: var(--bui-passwordmanager-icon-width);
+  cursor: pointer;
+  color: var(--bui-fg-primary);
+  background-color: #0000;
+  border: none;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+
+  &[data-size="small"] {
+    width: 2rem;
+    height: 2rem;
+  }
+
+  &[data-size="small"] svg {
+    width: 1rem;
+    height: 1rem;
+  }
+
+  &[data-size="medium"] {
+    width: 2.5rem;
+    height: 2.5rem;
+  }
+
+  &[data-size="medium"] svg {
+    width: 1.25rem;
+    height: 1.25rem;
+  }
+}
+
+.bui-PasswordField .bui-InputWrapper[data-size="small"] .bui-Input {
+  padding-right: calc(2rem + var(--bui-passwordmanager-icon-width));
+}
+
+.bui-PasswordField .bui-InputWrapper[data-size="medium"] .bui-Input {
+  padding-right: calc(2.5rem + var(--bui-passwordmanager-icon-width));
 }
 
 .bui-SearchField {
