--- a/packages/ui/src/css/utilities/display.css
+++ b/packages/ui/src/css/utilities/display.css
@@ -1,110 +1,128 @@
-.bui-display-none {
-  display: none;
-}
+/*
+ * Copyright 2025 The Backstage Authors
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
 
-.bui-display-inline {
-  display: inline;
-}
-
-.bui-display-inline-block {
-  display: inline-block;
-}
-
-.bui-display-block {
-  display: block;
-}
-
-/* Breakpoint xs */
-@media (min-width: 640px) {
-  .xs\:bui-display-none {
+@layer utilities {
+  .bui-display-none {
     display: none;
   }
 
-  .xs\:bui-display-inline {
+  .bui-display-inline {
     display: inline;
   }
 
-  .xs\:bui-display-inline-block {
+  .bui-display-inline-block {
     display: inline-block;
   }
 
-  .xs\:bui-display-block {
+  .bui-display-block {
     display: block;
   }
-}
 
-/* Breakpoint sm */
-@media (min-width: 768px) {
-  .sm\:bui-display-none {
-    display: none;
+  /* Breakpoint xs */
+  @media (min-width: 640px) {
+    .xs\:bui-display-none {
+      display: none;
+    }
+
+    .xs\:bui-display-inline {
+      display: inline;
+    }
+
+    .xs\:bui-display-inline-block {
+      display: inline-block;
+    }
+
+    .xs\:bui-display-block {
+      display: block;
+    }
   }
 
-  .sm\:bui-display-inline {
-    display: inline;
+  /* Breakpoint sm */
+  @media (min-width: 768px) {
+    .sm\:bui-display-none {
+      display: none;
+    }
+
+    .sm\:bui-display-inline {
+      display: inline;
+    }
+
+    .sm\:bui-display-inline-block {
+      display: inline-block;
+    }
+
+    .sm\:bui-display-block {
+      display: block;
+    }
   }
 
-  .sm\:bui-display-inline-block {
-    display: inline-block;
+  /* Breakpoint md */
+  @media (min-width: 1024px) {
+    .md\:bui-display-none {
+      display: none;
+    }
+
+    .md\:bui-display-inline {
+      display: inline;
+    }
+
+    .md\:bui-display-inline-block {
+      display: inline-block;
+    }
+
+    .md\:bui-display-block {
+      display: block;
+    }
   }
 
-  .sm\:bui-display-block {
-    display: block;
-  }
-}
+  /* Breakpoint lg */
+  @media (min-width: 1280px) {
+    .lg\:bui-display-none {
+      display: none;
+    }
 
-/* Breakpoint md */
-@media (min-width: 1024px) {
-  .md\:bui-display-none {
-    display: none;
-  }
+    .lg\:bui-display-inline {
+      display: inline;
+    }
 
-  .md\:bui-display-inline {
-    display: inline;
-  }
+    .lg\:bui-display-inline-block {
+      display: inline-block;
+    }
 
-  .md\:bui-display-inline-block {
-    display: inline-block;
-  }
-
-  .md\:bui-display-block {
-    display: block;
-  }
-}
-
-/* Breakpoint lg */
-@media (min-width: 1280px) {
-  .lg\:bui-display-none {
-    display: none;
+    .lg\:bui-display-block {
+      display: block;
+    }
   }
 
-  .lg\:bui-display-inline {
-    display: inline;
-  }
+  /* Breakpoint xl */
+  @media (min-width: 1536px) {
+    .xl\:bui-display-none {
+      display: none;
+    }
 
-  .lg\:bui-display-inline-block {
-    display: inline-block;
-  }
+    .xl\:bui-display-inline {
+      display: inline;
+    }
 
-  .lg\:bui-display-block {
-    display: block;
-  }
-}
+    .xl\:bui-display-inline-block {
+      display: inline-block;
+    }
 
-/* Breakpoint xl */
-@media (min-width: 1536px) {
-  .xl\:bui-display-none {
-    display: none;
-  }
-
-  .xl\:bui-display-inline {
-    display: inline;
-  }
-
-  .xl\:bui-display-inline-block {
-    display: inline-block;
-  }
-
-  .xl\:bui-display-block {
-    display: block;
+    .xl\:bui-display-block {
+      display: block;
+    }
   }
 }
